compiler/testData/diagnostics/tests/inference/constraints/kt8879.fir.kt
// !WITH_NEW_INFERENCE
// !DIAGNOSTICS: -UNUSED_PARAMETER

interface Inv<I>
interface Inv2<I>

fun <T: Inv2<T>> foo(klass: Inv<T>): String? = null

fun <X> bar(): Inv<X> = null!!

fun test() {
    <!NEW_INFERENCE_ERROR!>foo(bar())<!>
}
